mabger-meter/force-app/main/default/objects/Contact/fields/IsHoliday__c.field-meta.xml
<CustomField>
    <fullName>IsHoliday__c</fullName>
    <formula>IF(TODAY()=DATE(2021,12,24),1, 
IF(TODAY()=DATE(2021,12,25),1, 
IF(TODAY()=DATE(2021,12,31),1, 
IF(TODAY()=DATE(2021,11,24),1, 
IF(TODAY()=DATE(2021,11,25),1,
IF(TODAY()=DATE(2021,11,26),1,
IF(TODAY()=DATE(2021,10,28),1,
0
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsHoliday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>