mabger-meter/force-app/main/default/objects/Contact/fields/Last_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MQL_Date__c</fullName>
    <description>Date used to test automations when needed. Currently updated by Process Builder. Field is updated by process builder that updates contacts coming from Pardot with lifecycle status of MQL.</description>
    <label>Last MQL Date</label>
    <type>DateTime</type>
</CustomField>