mabger-meter/force-app/main/default/objects/Contact/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Status__c</fullName>
    <label>Lifecycle Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>