mabger-meter/force-app/main/default/objects/Contact/fields/LM_Do_Not_Create_New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LM_Do_Not_Create_New_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents opportunity duplication in the Lead Method process.</description>
    <label>LM Do Not Create New Opportunity</label>
    <type>Checkbox</type>
</CustomField>