mabger-meter/force-app/main/default/objects/Contact/fields/Load_File__c.field-meta.xml
<CustomField>
    <fullName>Load_File__c</fullName>
    <label>Load File</label>
    <length>80</length>
    <type>Text</type>
</CustomField>