mabger-meter/force-app/main/default/objects/Contact/fields/Mexico_State__c.field-meta.xml
<CustomField>
    <fullName>Mexico_State__c</fullName>
    <description>Field created due to Pardot integration. Data populated from Pardot only. Not on any page layouts. Workflow takes this field and populates State on the Contact record</description>
    <label>Mexico State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Baja California</fullName>
            </value>
            <value>
                <fullName>Baja California Sur</fullName>
            </value>
            <value>
                <fullName>Chihuahua</fullName>
            </value>
            <value>
                <fullName>Colima</fullName>
            </value>
            <value>
                <fullName>Campeche</fullName>
            </value>
            <value>
                <fullName>Coahuila</fullName>
            </value>
            <value>
                <fullName>Chiapas</fullName>
            </value>
            <value>
                <fullName>Federal District</fullName>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
            </value>
            <value>
                <fullName>Durango</fullName>
            </value>
            <value>
                <fullName>Guerrero</fullName>
            </value>
            <value>
                <fullName>Guanajuato</fullName>
            </value>
            <value>
                <fullName>Hidalgo</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Mexico State</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Michoacán</fullName>
            </value>
            <value>
                <fullName>Morelos</fullName>
            </value>
            <value>
                <fullName>Nayarit</fullName>
            </value>
            <value>
                <fullName>Newfoundland</fullName>
            </value>
            <value>
                <fullName>Nuevo León</fullName>
            </value>
            <value>
                <fullName>Nuevo Leon</fullName>
            </value>
            <value>
                <fullName>Oaxaca</fullName>
            </value>
            <value>
                <fullName>Puebla</fullName>
            </value>
            <value>
                <fullName>Querétaro</fullName>
            </value>
            <value>
                <fullName>Quintana Roo</fullName>
            </value>
            <value>
                <fullName>Queretaro</fullName>
            </value>
            <value>
                <fullName>Sinaloa</fullName>
            </value>
            <value>
                <fullName>San Luis Potosí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>