mabger-meter/force-app/main/default/objects/Contact/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <label>NAICS Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>