mabger-meter/force-app/main/default/objects/Contact/fields/Newsletter_opt_out__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter Opt Out</label>
    <type>Checkbox</type>
</CustomField>