mabger-meter/force-app/main/default/objects/Contact/fields/Next_Annual_CSAT_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Annual_CSAT_Survey_Date__c</fullName>
    <label>Next Annual CSAT Survey Date</label>
    <type>Date</type>
</CustomField>