mabger-meter/force-app/main/default/objects/Contact/fields/Pardot_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comment__c</fullName>
    <description>Pardot comment field. Contains most recent comment</description>
    <inlineHelpText>Most recent comment from Pardot.</inlineHelpText>
    <label>Pardot Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>