mabger-meter/force-app/main/default/objects/Contact/fields/Pardot_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comment_History__c</fullName>
    <description>field concatenates pardot comment field which is just most recent comment</description>
    <inlineHelpText>All recent comments from Pardot</inlineHelpText>
    <label>Pardot Comment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>