mabger-meter/force-app/main/default/objects/Contact/fields/Pardot_Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field can be checked by specific marketing individuals only and syncs with the Do Not Email field in Pardot</description>
    <inlineHelpText>Field can be checked by specific marketing individuals only</inlineHelpText>
    <label>Pardot Do Not Email</label>
    <type>Checkbox</type>
</CustomField>