mabger-meter/force-app/main/default/objects/Contact/fields/Pardot_Interesting_Moment__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Interesting_Moment__c</fullName>
    <description>Pardot provided data</description>
    <inlineHelpText>Data from Pardot</inlineHelpText>
    <label>Pardot Interesting Moment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>