mabger-meter/force-app/main/default/objects/Contact/fields/Partner_User_Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_Deactivation_Reason__c</fullName>
    <description>Reason why contact&apos;s partner community user is no longer active.</description>
    <label>Partner User Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer at Company</fullName>
            </value>
            <value>
                <fullName>Company No Longer Rep</fullName>
            </value>
            <value>
                <fullName>Unknown - Will not Validate</fullName>
            </value>
            <value>
                <fullName>Request not from Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Passive or Internal  - Partner Licenses Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>