mabger-meter/force-app/main/default/objects/Contact/fields/Pricebook_Location__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Location__c</fullName>
    <description>This Field is used to designate User Location and what Pricebooks the User should have access to.</description>
    <label>Pricebook Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&quot;United States&quot;</fullName>
                <default>true</default>
                <label>&quot;United States&quot;</label>
            </value>
            <value>
                <fullName>&quot;Latin America&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Badger Meter Internal&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Badger Meter Internal Advanced&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>