mabger-meter/force-app/main/default/objects/Contact/fields/Pricebook_Location_for_Extranet__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Location_for_Extranet__c</fullName>
    <description>Store location data for Extranet</description>
    <label>Pricebook Location for Extranet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>