mabger-meter/force-app/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates which contact is the primary sales contact for the account.</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>