mabger-meter/force-app/main/default/objects/Contact/fields/Primary_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_of_Interest__c</fullName>
    <description>Pass-through field. Entered by customer on web, comes to SF via Pardot. Used for Lead Routing by LeadMethod.</description>
    <label>Primary Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Brands_of_Interest</valueSetName>
    </valueSet>
</CustomField>