mabger-meter/force-app/main/default/objects/Contact/fields/Product_Selection__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection__c</fullName>
    <description>Data from Pardot</description>
    <inlineHelpText>Data from Pardot</inlineHelpText>
    <label>Product Selection</label>
    <length>200</length>
    <type>Text</type>
</CustomField>