mabger-meter/force-app/main/default/objects/Contact/fields/Products_Brands_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Products_Brands_of_Interest__c</fullName>
    <description>Data will be populated by lead conversion if available</description>
    <label>OLD Products/Brands of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Brands_of_Interest</valueSetName>
    </valueSet>
</CustomField>