mabger-meter/force-app/main/default/objects/Contact/fields/Products_CSV_for_Extranet_1__c.field-meta.xml
<CustomField>
    <fullName>Products_CSV_for_Extranet_1__c</fullName>
    <description>In general, do not manually edit! (Contains list of products. Quoted and Comma-Separated-Values. E.g. &quot;ABC&quot;, &quot;EFG, &quot;XYZ&quot;. Updated via triggers on Account, Contact. Used by User formula field Assertion_Data_For_Extranet__c.)</description>
    <inlineHelpText>In general, do not manually edit! (Contains list of products. Quoted and Comma-Separated-Values. E.g. &quot;ABC&quot;, &quot;EFG, &quot;XYZ&quot;. Updated via triggers on Account, Contact. Used by User formula field Assertion_Data_For_Extranet__c.)</inlineHelpText>
    <label>Products CSV for Extranet 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>