mabger-meter/force-app/main/default/objects/Contact/fields/Products_for_Extranet__c.field-meta.xml
<CustomField>
    <fullName>Products_for_Extranet__c</fullName>
    <description>This Field is used to display what Products the Contact should have access to in the Extranet.  The data is controlled by Accounts.Products__c.</description>
    <label>Products for Extranet</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>