mabger-meter/force-app/main/default/objects/Contact/fields/Professional_Associations__c.field-meta.xml
<CustomField>
    <fullName>Professional_Associations__c</fullName>
    <label>Professional Associations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>