mabger-meter/force-app/main/default/objects/Contact/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <inlineHelpText>From Pardot / web form</inlineHelpText>
    <label>Project Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>