mabger-meter/force-app/main/default/objects/Contact/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <inlineHelpText>From Pardot / web form</inlineHelpText>
    <label>Project Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>