mabger-meter/force-app/main/default/objects/Contact/fields/Recalc_Eligibility_Date__c.field-meta.xml
<CustomField>
    <fullName>Recalc_Eligibility_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to recalculate the Eligibility Date field.  

When checked, it will add 18 months to the existing Eligibility Date and then uncheck the Recalc Eligibility Date checkbox field.

If the Eligibility Date is blank, it will add 18 months to Today&apos;s date and then uncheck the Recalc Eligibility Date checkbox field.</description>
    <inlineHelpText>This field is used to recalculate the Eligibility Date field.  

When checked, it will add 18 mos. to the Eligibility Date and then uncheck the Recalc Eligibility checkbox field.  If the Eligibility Date is blank, it will add 18 mos. to Today&apos;s Date.</inlineHelpText>
    <label>Recalc Eligibility Date</label>
    <type>Checkbox</type>
</CustomField>