mabger-meter/force-app/main/default/objects/Contact/fields/Reject_Extranet_Access__c.field-meta.xml
<CustomField>
    <fullName>Reject_Extranet_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to notify Contact that access to Extranet has been rejected.</description>
    <inlineHelpText>Used to notify Contact that access to Extranet has been rejected.</inlineHelpText>
    <label>Reject Extranet Access</label>
    <type>Checkbox</type>
</CustomField>