mabger-meter/force-app/main/default/objects/Contact/fields/Reports_To_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Reports_To_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reports To External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>