mabger-meter/force-app/main/default/objects/Contact/fields/Role_s__c.field-meta.xml
<CustomField>
    <fullName>Role_s__c</fullName>
    <label>Role(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bids\Contracts</fullName>
            </value>
            <value>
                <fullName>Billing Vendor</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>