mabger-meter/force-app/main/default/objects/Contact/fields/Software_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>Software_Downloaded__c</fullName>
    <inlineHelpText>Downloaded from website. Data from Pardot</inlineHelpText>
    <label>Software Downloaded</label>
    <length>200</length>
    <type>Text</type>
</CustomField>