mabger-meter/force-app/main/default/objects/Contact/fields/Software_Downloaded_History__c.field-meta.xml
<CustomField>
    <fullName>Software_Downloaded_History__c</fullName>
    <inlineHelpText>Software downloaded from website. Data from Pardot</inlineHelpText>
    <label>Software Downloaded History</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>