mabger-meter/force-app/main/default/objects/Contact/fields/Sports_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Sports_Affiliations__c</fullName>
    <label>Sports Affiliations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>