mabger-meter/force-app/main/default/objects/Contact/fields/System_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>System_Test_Date__c</fullName>
    <description>Date used to test automations when needed. Currently updated by Process Builder: Lead Method Contact MQL</description>
    <label>System Test Date</label>
    <type>DateTime</type>
</CustomField>