mabger-meter/force-app/main/default/objects/Contact/fields/Time_Zone_Id__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Id__c</fullName>
    <label>Time Zone Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>