mabger-meter/force-app/main/default/objects/Contact/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility</label>
    <type>Checkbox</type>
</CustomField>