mabger-meter/force-app/main/default/objects/Contact/fields/Utility_DISTInews_International__c.field-meta.xml
<CustomField>
    <fullName>Utility_DISTInews_International__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this Contact should receive International Utility DISTInews distributions.</inlineHelpText>
    <label>Utility DISTInews - International</label>
    <type>Checkbox</type>
</CustomField>