mabger-meter/force-app/main/default/objects/Contact/fields/Utility_eNews__c.field-meta.xml
<CustomField>
    <fullName>Utility_eNews__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for a contact if record is to receive Utility eNews distributions.</description>
    <inlineHelpText>Check this box if this Contact should receive Utility eNews distributions.</inlineHelpText>
    <label>Utility eNews</label>
    <type>Checkbox</type>
</CustomField>