mabger-meter/force-app/main/default/objects/Contact/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>