mabger-meter/force-app/main/default/objects/Contact/validationRules/CERT_Inactive_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>CERT_Inactive_Contact</fullName>
    <active>true</active>
    <description>CERT reporting selection not allowed if Contact is INACTIVE</description>
    <errorConditionFormula>AND
(
Inactive__c = True,  CERT__c = True
)</errorConditionFormula>
    <errorDisplayField>CERT__c</errorDisplayField>
    <errorMessage>You cannot select CERT if the CONTACT is INACTIVE.  Either un-check the Inactive checkbox or un-check CERT.</errorMessage>
</ValidationRule>