mabger-meter/force-app/main/default/objects/Contact/validationRules/CERT_MUST_have_an_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>CERT_MUST_have_an_Email</fullName>
    <active>true</active>
    <description>When selecting CERT reporting, validate there the Contact has a VALID Email Address.</description>
    <errorConditionFormula>AND(
CERT__c == true,
Email = &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>You MUST enter an Email address for this Contact when selecting CERT reporting.  Either enter a VALID Email address or remove the CERT reporting.</errorMessage>
</ValidationRule>