mabger-meter/force-app/main/default/objects/Contact/validationRules/Email_Invoice_Inactive_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Invoice_Inactive_Contact</fullName>
    <active>true</active>
    <description>Email Invoice selection not allowed if Contact is INACTIVE</description>
    <errorConditionFormula>AND
(
Inactive__c = True,  Email_Invoice__c = True
)</errorConditionFormula>
    <errorDisplayField>Inactive__c</errorDisplayField>
    <errorMessage>You cannot select Email Invoice if the CONTACT is INACTIVE.  Uncheck the Inactive checkbox, then check Email Invoice.</errorMessage>
</ValidationRule>