mabger-meter/force-app/main/default/objects/Contact/validationRules/Email_Selections_COPIES_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Selections_COPIES_Validation</fullName>
    <active>true</active>
    <description>Do not allow Email Selections (COPIES), if the Account Organization Type is not UD-Utility Distributor or IR-Flow Industrial/Commercial Rep</description>
    <errorConditionFormula>ISBLANK(Email_Selections_COPIES__c) = false &amp;&amp;    NOT(ISPICKVAL(Account.Organization_Type__c,&quot;UD-Utility Distributor&quot;)) &amp;&amp;
NOT(ISPICKVAL(Account.Organization_Type__c,&quot;IR-Flow Industrial/Commercial Rep&quot;))</errorConditionFormula>
    <errorDisplayField>Email_Selections_COPIES__c</errorDisplayField>
    <errorMessage>You can only select Email Selections (COPIES) for Contact on Accounts with an Organization Type of UD-Utility Distributor or IR-Flow Industrial/Commercial Rep.  i.e. a Channel Partner</errorMessage>
</ValidationRule>