mabger-meter/force-app/main/default/objects/Contact/validationRules/Mailing_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Country_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MailingCountry )

&amp;&amp; (NOT($Profile.Name = &apos;Partner Portal Profile1521817908041&apos;))</errorConditionFormula>
    <errorDisplayField>MailingCountry</errorDisplayField>
    <errorMessage>Enter Mailing Country</errorMessage>
</ValidationRule>