mabger-meter/force-app/main/default/objects/Contact/validationRules/Ship_To_Number_2_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Ship_To_Number_2_Validation</fullName>
    <active>true</active>
    <description>Validate CERT Ship To Number 2.  Must be 4 numbers with leading zeros OR BLANK.</description>
    <errorConditionFormula>ISBLANK(CERT_Shipto_2__c) ==  False &amp;&amp; (LEN(CERT_Shipto_2__c) &lt;&gt; 4 || ISNUMBER(CERT_Shipto_2__c) &lt;&gt; true)</errorConditionFormula>
    <errorDisplayField>CERT_Shipto_2__c</errorDisplayField>
    <errorMessage>Ship To Number 2 must be 4 numbers with leading zeros.</errorMessage>
</ValidationRule>