mabger-meter/force-app/main/default/objects/Contact/listViews/Contact_with_Pardot_Einstein_Scores.listView-meta.xml
<ListView>
    <fullName>Contact_with_Pardot_Einstein_Scores</fullName>
    <columns>ENGAGEMENT_SCORE</columns>
    <columns>pi__score__c</columns>
    <columns>pi__Pardot_Last_Scored_At__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>mkto_si__Priority__c</columns>
    <columns>mkto71_Lead_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ENGAGEMENT_SCORE</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notContain</operation>
        <value>@badgermeter</value>
    </filters>
    <label>Contacts with Pardot Einstein Scores</label>
    <sharedTo>
        <group>Marketing_Pardot_User_Group</group>
    </sharedTo>
</ListView>