mabger-meter/force-app/main/default/objects/Contact/listViews/Contacts_Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Contacts_Created_This_Week</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Role_s__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>pi__score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Contacts Created This Week</label>
</ListView>