mabger-meter/force-app/main/default/objects/Contact/listViews/InActive_Contacts.listView-meta.xml
<ListView>
    <fullName>InActive_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Role_s__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Inactive__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>InActive Contacts</label>
</ListView>