mabger-meter/force-app/main/default/objects/Contact/listViews/Water_Quality_UK_Contacts.listView-meta.xml
<ListView>
    <fullName>Water_Quality_UK_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Role_s__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Company_Number__c</field>
        <operation>equals</operation>
        <value>&quot;28 - BADGER METER UK, LTD&quot;</value>
    </filters>
    <label>Water Quality UK Contacts</label>
</ListView>